// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Table Category {
    category_id SMALLINT [primary key]
    category_name VARCHAR(15) 
    description TEXT 
    picture BLOB 
    }

Table Customer {
    customer_id VARCHAR(5) [primary key]
    company_name VARCHAR(40) 
    contact_name VARCHAR(30) 
    contact_title VARCHAR(30) 
    address VARCHAR(60) 
    city VARCHAR(15) 
    region VARCHAR(15) 
    postal_code VARCHAR(10) 
    country VARCHAR(15) 
    phone VARCHAR(24) 
    fax VARCHAR(24) 
    }

Table CustomerCustomerDemo {
    customer_id VARCHAR(5) [primary key]
    customer_type_id VARCHAR(5) 
    }

Table CustomerDemographic {
    customer_type_id VARCHAR(5) [primary key]
    customer_desc TEXT 
    }

Table Device {
    unique_id INTEGER [primary key]
    ip_address TEXT 
    device_type_id INTEGER 
    create_date DATETIME 
    update_date DATETIME 
    is_inactive BOOLEAN 
    }

Table DeviceType {
    unique_id INTEGER [primary key]
    device_type TEXT 
    create_date DATETIME 
    update_date DATETIME 
    is_inactive BOOLEAN 
    }

Table DeviceSensorsLine {
    device_id INTEGER [primary key]
    sensor_line_id INTEGER 
    create_date DATETIME 
    update_date DATETIME 
    is_inactive BOOLEAN 
    }

Table SensorsLine {
    unique_id INTEGER [primary key]
    uuid_id CHAR(32) 
    is_digital BOOLEAN 
    sensor_line_label TEXT 
    create_date DATETIME 
    update_date DATETIME 
    is_inactive BOOLEAN 
    }

Table Employee {
    employee_id SMALLINT [primary key]
    last_name VARCHAR(20) 
    first_name VARCHAR(10) 
    title VARCHAR(30) 
    title_of_courtesy VARCHAR(25) 
    birth_date DATE 
    hire_date DATE 
    address VARCHAR(60) 
    city VARCHAR(15) 
    region VARCHAR(15) 
    postal_code VARCHAR(10) 
    country VARCHAR(15) 
    home_phone VARCHAR(24) 
    extension VARCHAR(4) 
    photo BLOB 
    notes TEXT 
    reports_to SMALLINT 
    photo_path VARCHAR(255) 
    }

Table EmployeeTerritory {
    employee_id SMALLINT [primary key]
    territory_id VARCHAR(20) 
    }

Table Territory {
    territory_id VARCHAR(20) [primary key]
    territory_description VARCHAR(60) 
    region_id SMALLINT 
    }

Table Equipment {
    unique_id INTEGER [primary key]
    create_date DATETIME 
    update_date DATETIME 
    equipment_type_id INTEGER 
    equipment_name TEXT 
    is_inactive BOOLEAN 
    }

Table EquipmentType {
    unique_id INTEGER [primary key]
    equipment_type TEXT 
    create_date DATETIME 
    update_date DATETIME 
    is_inactive BOOLEAN 
    }

Table EventSubjectsType {
    unique_id INTEGER [primary key]
    event_subject_type TEXT 
    create_date DATETIME 
    update_date DATETIME 
    is_inactive BOOLEAN 
    }

Table EventType {
    unique_id INTEGER [primary key]
    event_type TEXT 
    create_date DATETIME 
    update_date DATETIME 
    is_inactive BOOLEAN 
    }

Table EventsLog {
    subject_of_change_id INTEGER [primary key]
    subject_of_change_type_id INTEGER 
    event_type_id INTEGER 
    previous_state_value TEXT 
    new_state_value TEXT 
    log_level_id INTEGER 
    create_date DATETIME 
    update_date DATETIME 
    is_inactive BOOLEAN 
    }

Table LogLevel {
    unique_id INTEGER [primary key]
    log_level TEXT 
    create_date DATETIME 
    update_date DATETIME 
    is_inactive BOOLEAN 
    }

Table Order {
    order_id SMALLINT [primary key]
    customer_id VARCHAR(5) 
    employee_id SMALLINT 
    order_date DATE 
    required_date DATE 
    shipped_date DATE 
    ship_via SMALLINT 
    freight FLOAT 
    ship_name VARCHAR(40) 
    ship_address VARCHAR(60) 
    ship_city VARCHAR(15) 
    ship_region VARCHAR(15) 
    ship_postal_code VARCHAR(10) 
    ship_country VARCHAR(15) 
    }

Table Shipper {
    shipper_id SMALLINT [primary key]
    company_name VARCHAR(40) 
    phone VARCHAR(24) 
    }

Table OrderDetail {
    order_id SMALLINT [primary key]
    product_id SMALLINT 
    unit_price FLOAT 
    quantity SMALLINT 
    discount FLOAT 
    }

Table Product {
    product_id SMALLINT [primary key]
    product_name VARCHAR(40) 
    supplier_id SMALLINT 
    category_id SMALLINT 
    quantity_per_unit VARCHAR(20) 
    unit_price FLOAT 
    units_in_stock SMALLINT 
    units_on_order SMALLINT 
    reorder_level SMALLINT 
    discontinued INTEGER 
    }

Table Supplier {
    supplier_id SMALLINT [primary key]
    company_name VARCHAR(40) 
    contact_name VARCHAR(30) 
    contact_title VARCHAR(30) 
    address VARCHAR(60) 
    city VARCHAR(15) 
    region VARCHAR(15) 
    postal_code VARCHAR(10) 
    country VARCHAR(15) 
    phone VARCHAR(24) 
    fax VARCHAR(24) 
    homepage TEXT 
    }

Table Region {
    region_id SMALLINT [primary key]
    region_description VARCHAR(60) 
    }

Table UsState {
    state_id SMALLINT [primary key]
    state_name VARCHAR(100) 
    state_abbr VARCHAR(2) 
    state_region VARCHAR(50) 
    }

Table Vessel {
    unique_id INTEGER [primary key]
    create_date DATETIME 
    update_date DATETIME 
    vessel_name TEXT 
    imo_number TEXT 
    is_inactive BOOLEAN 
    }

Table VesselEquipment {
    vessel_id INTEGER [primary key]
    equipment_id INTEGER 
    create_date DATETIME 
    update_date DATETIME 
    is_inactive BOOLEAN 
    }



// Relationships
    Ref: CustomerCustomerDemo.(customer_id) < Customer.(customer_id)
    Ref: CustomerCustomerDemo.(customer_type_id) < CustomerDemographic.(customer_type_id)
    Ref: Device.(device_type_id) < DeviceType.(unique_id)
    Ref: DeviceSensorsLine.(device_id) < Device.(unique_id)
    Ref: DeviceSensorsLine.(sensor_line_id) < SensorsLine.(unique_id)
    Ref: Employee.(reports_to) < Employee.(employee_id)
    Ref: EmployeeTerritory.(employee_id) < Employee.(employee_id)
    Ref: EmployeeTerritory.(territory_id) < Territory.(territory_id)
    Ref: Territory.(region_id) < Region.(region_id)
    Ref: Equipment.(equipment_type_id) < EquipmentType.(unique_id)
    Ref: EventsLog.(event_type_id) < EventType.(unique_id)
    Ref: EventsLog.(log_level_id) < LogLevel.(unique_id)
    Ref: Order.(customer_id) < Customer.(customer_id)
    Ref: Order.(employee_id) < Employee.(employee_id)
    Ref: Order.(ship_via) < Shipper.(shipper_id)
    Ref: OrderDetail.(order_id) < Order.(order_id)
    Ref: OrderDetail.(product_id) < Product.(product_id)
    Ref: Product.(category_id) < Category.(category_id)
    Ref: Product.(supplier_id) < Supplier.(supplier_id)
    Ref: VesselEquipment.(equipment_id) < Equipment.(unique_id)
    Ref: VesselEquipment.(vessel_id) < Vessel.(unique_id)
